--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
 
     <body>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="webterm.js"></script>
-
-        <div id="nano">
-
-            <textarea id="__ninp" name="nanoinp" cols="50" rows="10"></textarea>
-
-        </div>
-
+        <script src="circut.js"></script>
     </body>
 
 
