--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     </head>
 
 
-    <body>
+    <body oncontextmenu="return false">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="constants.js"></script>
+        <script src="gates.js"></script>
         <script src="circut.js"></script>
 
 
