--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
 
-        <title>Webterm Test</title>
+        <title>Gatez</title>
 
         <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 
