--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 
         <link rel="stylesheet" href="uikit/css/uikit.min.css">
+        <link rel="icon" type="image" href="favicon.ico">
         <script src="uikit/js/uikit.min.js"></script>
         <script src="uikit/js/uikit-icons.min.js"></script>
         <link rel="stylesheet" href="styles.css">
