--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <div id="icc-infoform ">
                         <input id="icc-name" class="uk-input uk-width-1 uk-column-1" type="text" placeholder="New Circut Name"></input>
                         
-                        <button class="uk-button uk-button-default uk-column-1 uk-width-1 uk-margin " onclick="generateTruthTable(workingIntegrationCircut.name);startSpinner();"> Generate Truth Table </button> 
+                        <button class="uk-button uk-button-default uk-column-1 uk-width-1 uk-margin " onclick="startSpinner();generateTruthTable(workingIntegrationCircut.name);"> Generate Truth Table </button> 
                     </div>
                     <div id="icc-main">
 
