--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 
 
-                <a class="uk-link-muted" href="#gateExplinationModal" uk-toggle>Gate Info</a>
+                <a class="uk-link-muted" href="#gateExplinationModal" onclick="_mode_ = CursorModes.INMODAL" uk-toggle>Gate Info</a>
                 
 
             </div>
@@ -319,7 +319,7 @@
                     
                 </div>
                 <div class="uk-modal-footer uk-text-right">
-                    <button class="uk-button uk-button-primary uk-modal-close" type="button">Done</button>
+                    <button class="uk-button uk-button-primary uk-modal-close" onclick="_mode_ = CursorModes.MOVEMENT" type="button">Done</button>
                 </div>
             </div>
         </div>
