--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
         <div id="gateExplinationModal" class="uk-modal uk-modal-container uk-overflow-auto" uk-modal>
             <div class="uk-modal-dialog">
-                <button class="uk-modal-close-default" type="button" uk-close></button>
+                <button class="uk-modal-close-default" type="button" onclick="_mode_ = CursorModes.MOVEMENT" uk-close></button>
                 <div class="uk-modal-header">
                     <h2 class="uk-modal-title">Gate Info</h2>
                 </div>
