Error handling, and collision hole progress

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <li><a href="#">Gates</a></li>
                     <li><a href="#">Memory</a></li>
                     <li><a href="#">I/O</a></li>
+                    <li><a href="#">Misc</a></li>
                     <li><a href="#">Custom</a></li>
                 </ul>
 
@@ -103,6 +104,21 @@
                             <li>
                                 <button class="uk-button uk-button-default uk-width-1-1" onclick="circutInHand = new LED(0,0);cursor('grab');">PIN Output</button>
                             </li>
+                        </ul>
+
+                    </li>
+                    <li>
+                        <ul class="uk-list">
+                            <li>
+                                <button class="uk-button uk-button-default uk-width-1-1" onclick="">Clock</button>
+                            </li>
+                            <li>
+                                <button class="uk-button uk-button-default uk-width-1-1" onclick="">Decoder</button>
+                            </li>
+                            <li>
+                                <button class="uk-button uk-button-default uk-width-1-1" onclick="">Encoder</button>
+                            </li>
+                            
                         </ul>
 
                     </li>
