More robust index code

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
                     </li>
                     <li>
-                        <ul class="uk-list" id = "custom_circuts_list">
+                        <ul class="uk-list" id = "custom_circuts_list" uk-sortable="handle: .uk-button">
                             
 
                         </ul>
