--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 <li>
                     <span class="uk-icon-button uk-margin" type="button" uk-tooltip="title: Save as .gateboard; pos: right" uk-icon="download" onclick="doSafely(createSaveFile);"></span>
                 </li>
+                <li>
+                    <span class="uk-icon-button uk-margin" type="button" uk-tooltip="title: Shortcuts; pos: right" uk-icon="question"></span>
+                </li>
             </ul>
             
         </div>
