working on bus implementation

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                 <button class="uk-button uk-button-secondary uk-width-1-1" onclick="">Clock</button>
                             </li>
                             <li>
-                                <button class="uk-button uk-button-secondary uk-width-1-1" onclick="">Decoder</button>
+                                <button class="uk-button uk-button-secondary uk-width-1-1" onclick="createNewGate(Decoder);">Decoder</button>
                             </li>
                             <li>
                                 <button class="uk-button uk-button-secondary uk-width-1-1" onclick="">Encoder</button>
